manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: test-deployment
  labels:
    app: test-deployment
spec:
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
      - name: test-container
        image: account-number.dkr.ecr.us-east-1.amazonaws.com/test-repo:latest
        ports:
        - containerPort: 80
