manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: test-service
spec:
  selector:
    app: brige-ware
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
